--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ layout: compress
             'longitude': {{ longitude }},
             'bio': {{ bio }},
             'image': {{ image }},
+            'image2': {{ image2 }},
             'links': {{ links }},
             'lastModified': {{ lastModified }},
         }{% unless forloop.last == true %},{% endunless %}
