--- a/index.html
+++ b/index.html
@@ -210,24 +210,24 @@ layout: compress
     <!-- info banner at bottom on site, click toggles popover -->
     <a class="infobanner" id="popover-open">
         <div class="infobanner__redaxo">
-            <img class="infobanner__logo" src="{{ '/assets/images/redaxo.svg' | relative_url }}" alt="REDAXO">
-            <span>Community <span class="hide-xs">World</span> Map</span>
+            <img class="infobanner__logo" src="{{ '/assets/images/hzlogo.svg' | relative_url }}" alt="HŽI">
+            <span>Karta <span class="hide-xs">STGO</span></span>
         </div>
         <div class="infobanner__join">
             <span class="infobanner__heart">♥</span>
-            <span>Join!</span>
+            <span>Dodaj!</span>
         </div>
     </a>
 
 
     <!-- popover -->
     <div class="popover" id="popover">
-        <button id="popover-close" class="popover__close" type="button"><span>Close</span><i><i></i></i></button>
+        <button id="popover-close" class="popover__close" type="button"><span>Zatvori</span><i><i></i></i></button>
         <div class="popover__body">
 
             <h1 class="popover__title">
-                <img class="redaxo-logo" src="{{ '/assets/images/redaxo-cms.svg' | relative_url }}" alt="REDAXO"><br>
-                Community World Map
+                <img class="redaxo-logo" src="{{ '/assets/images/hzlogo.svg' | relative_url }}" alt="HŽ"><br>
+                Karta STGO
             </h1>
 
             <p>Any of the <strong>{{ itemsCount }}</strong> location markers on this map represents someone who’s involved in <a href="https://redaxo.org" target="_blank" rel="noopener noreferrer">REDAXO</a>, which we the community believe is one of the finest CMS around.&nbsp;✌️</p>
