--- a/index.html
+++ b/index.html
@@ -230,15 +230,15 @@ layout: compress
                 Karta STGO
             </h1>
 
-            <p>Any of the <strong>{{ itemsCount }}</strong> location markers on this map represents someone who’s involved in <a href="https://redaxo.org" target="_blank" rel="noopener noreferrer">REDAXO</a>, which we the community believe is one of the finest CMS around.&nbsp;✌️</p>
-            <p>The project is hosted at <a href="https://github.com/FriendsOfREDAXO/community" target="_blank" rel="noopener noreferrer">GitHub</a>, which allows for everyone to <strong>add and manage their map entries by themselves</strong>! This is pretty cool. If you like to join the map, just follow the link and find all information:</p>
+            <p>Bilo koja od <strong>{{ itemsCount }}</strong> prikazanih lokacija na karti predstavlja stalnu točku geodetske osnove <a href="https://www.hzinfra.hr" target="_blank" rel="noopener noreferrer">HŽ Infrastrukture</a>.&nbsp;✌️</p>
+            <p>Ovaj projekt se nalazi na <a href="https://github.com/ivlasic/stgo" target="_blank" rel="noopener noreferrer">GitHub</a>, koji svakome omogućava <strong>dodavanje novih stalnih točaka</strong>! Ako želite dodati vašu točku, slijedite poveznicu kako bi pronašli daljnje informacije:</p>
 
             <div class="calltoaction">
-                <p>👉 <a href="https://github.com/FriendsOfREDAXO/community/tree/master/_directory" target="_blank" rel="noopener noreferrer">Learn how to manage your marker!</a></p>
+                <p>👉 <a href="https://github.com/ivlasic/stgo/tree/master/_directory" target="_blank" rel="noopener noreferrer">Saznajte kako dodati vlastitu točku!</a></p>
             </div>
 
             <div class="legals">
-                <p>Legals: This service is provided by the REDAXO community which is represented by <a href="http://www.yakamara.de/#impressum" target="_blank" rel="noopener noreferrer">Yakamara&nbsp;Media</a>. It is <abbr title="Free and Open Source Software">FOSS</abbr> and usage is free of charge.</p>
+                <p>Legals: Ovu veb stranicu omogućio je <a href="https://www.ivgeo.net" target="_blank" rel="noopener noreferrer">Ivan&nbsp;Vlašić</a>. Ovo je <abbr title="Free and Open Source Software">FOSS</abbr> i upotreba je besplatna.</p>
             </div>
 
         </div>
