--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ layout: compress
         {% assign links = entry.links | jsonify | escape_once | replace: "&quot;", '"' %}
 
         <!-- Street View -->
-        {% assign StreetView = 'https://www.google.com/maps?q&layer=c&cbll=' | append: latitude | append: "," | append: longitude | append: '&cbp=11,0,0,0,0' | escape_once | replace: "&quot;", '' | replace: "&amp;", '&' %}
+        {% assign StreetView = '"https://www.google.com/maps?q&layer=c&cbll=' | append: latitude | append: "," | append: longitude | append: '&cbp=11,0,0,0,0"' | escape_once | replace: "&quot;", '' | replace: "&amp;", '&' %}
 
         <!-- last modified -->
         {% assign lastModified = site.data.last-modified[idRaw] | default: 0 %}
