added poi geojson

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ layout: compress
     <script src="{{ '/assets/plugins/hash/hash.js' | relative_url }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js" charset="utf-8"></script>
 
+    <script src="{{ '/assets/addons/HZIPOI-geojson.js' | relative_url }}" type="text/javascript"></script><!-- HZI kolodvori i stajališta -->
     <script src="{{ '/assets/addons/Pruga-geojson.js' | relative_url }}" type="text/javascript"></script><!-- pruge -->
 
     <!-- init directory data and items counter -->
