--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ layout: compress
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
     <link rel="stylesheet" href="{{ '/assets/vendor/leaflet.markercluster/dist/MarkerCluster.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/vendor/leaflet.markercluster/dist/MarkerCluster.Default.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/vendor/Leaflet.LinearMeasurement/Leaflet.LinearMeasurement.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
     <!-- urls -->
@@ -76,6 +77,7 @@ layout: compress
     <script src="{{ '/assets/vendor/leaflet.edgebuffer/src/leaflet.edgebuffer.js' | relative_url }}"></script>
     <script src="{{ '/assets/plugins/hash/hash.js' | relative_url }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js" charset="utf-8"></script>
+    <script src="{{ '/assets/vendor/Leaflet.LinearMeasurement/Leaflet.LinearMeasurement.js' | relative_url }}"></script>
 
     <script src="{{ '/assets/addons/HZIPOI-geojson.js' | relative_url }}" type="text/javascript"></script><!-- HZI kolodvori i stajališta -->
     <script src="{{ '/assets/addons/Pruga-geojson.js' | relative_url }}" type="text/javascript"></script><!-- pruge -->
