--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ layout: compress
     <script src="{{ '/assets/addons/HZIPOI-geojson.js' | relative_url }}" type="text/javascript"></script><!-- HZI kolodvori i stajališta -->
     <script src="{{ '/assets/addons/Pruga-geojson.js' | relative_url }}" type="text/javascript"></script><!-- pruge -->
     <script src="{{ '/assets/addons/Reperi-M103-ZPD-2011.geojson.js' | relative_url }}" type="text/javascript"></script><!-- ŽPD poligoni M103 -->
+    <script src="{{ '/assets/addons/DGU-STGO.geojson.js' | relative_url }}" type="text/javascript"></script><!-- DGU STGO -->
 
     <!-- init directory data and items counter -->
     {% assign directoryData = site.collections | where: "label", "directory" | first %}
